--- a/zh-CN.lng
+++ b/zh-CN.lng
@@ -1,4 +1,5 @@
-LanguageName=English
+LanguageName=简体中文
+// By: inkydragon@CN
 
 // Global
 Hynek_V_Locked=It's locked. I won't get any further this way.
