cn: 翻译主界面+设置

--- a/zh-CN.lng
+++ b/zh-CN.lng
@@ -317,19 +317,19 @@ AccessibilityDefaultLevelDescription=There's nothing worth mentioning around her
 AccessibilityMountedDescription=You're sitting in the saddle of your steed.
 AccessibilityLeadHorseStop=You let go of the horse's bridle.
 
-// UI
-NewGame=Start new game
-SaveGame=Save game
-LoadGame=Load game
-EndlessLevel=Arena
-CloseGame=Exit
-BackToMainMenu=Back to main menu
-GameOver=Game Over
-GameOverDead=You have died
-GameOverDeadRuprecht=Prior Rupert died
-GameOverDeadJoachim=Father Joachim died
-GameOverDeadHynek=Hynek died
-GameOverDeadLothar=Lothar died
+// UI - 用户界面
+NewGame=开始新游戏
+SaveGame=保存游戏
+LoadGame=加载游戏
+EndlessLevel=竞技场
+CloseGame=退出游戏
+BackToMainMenu=返回主菜单
+GameOver=游戏结束
+GameOverDead=你死了
+GameOverDeadRuprecht=鲁珀特(Rupert)去世前
+GameOverDeadJoachim=约阿希姆(Joachim)神父去世
+GameOverDeadHynek=海涅克(Hynek)去世
+GameOverDeadLothar=洛塔尔(Lothar)去世
 GameOverTutorial1=To be able to use the items from your inventory on things around you, you need to equip them first.
 GameOverTutorial2=Using the dedicated button, you can have all the nearby interactions highlighted.
 GameOverTutorial3=Do not hurry, keep a safe distance, and wait for the enemy's mistake.
@@ -362,50 +362,50 @@ GameOverQuote12=„Deus lo vult - God wills it.“<br><br>The motto of the first
 GameOverQuote13=„The sword is without, and the pestilence and famine within. He that is in the field shall die with the sword. And he that is in the city, pestilence and famine shall devour him.“<br><br>Ezekiel 7; 15
 GameOverQuote14=„I am the light of the world: he that followeth me shall not walk in darkness but have the light of life.“<br><br>John 8; 12
 GameOverQuote15=„He that is not with me is against me.“<br><br>Matthew 12; 30
-LoadLastCheckpoint=Reload checkpoint
-Autosaves=Autosaves
-SaveSlot=Save
-Quickload=Quick load
-Quicksave=Quick save
-Language=Language
-LanguageCommunity=* Community translation
-Voiceovers=Voiceovers language
-MinimapPlus=Zoom in
-MinimapMinus=Zoom out
-Compass=Compass
-CompassNorth=N
-CompassNorthFull=North
-CompassSouth=S
-CompassSouthFull=South
-CompassWest=W
-CompassWestFull=West
-CompassEast=E
-CompassEastFull=East
-CompassNorthEast=NE
-CompassNorthEastFull=Northeast
-CompassSouthEast=SE
-CompassSouthEastFull=Southeast
-CompassNorthWest=NW
-CompassNorthWestFull=Northwest
-CompassSouthWest=SW
-CompassSouthWestFull=Southwest
-Health=Health
-Energy=Energy
-Level=Level
-ActiveQuests=Current tasks
-NewQuest=A new adventure begins
-NewTask=New task
-CollectibleObtainedLeft=<i>{0}</i> acquired ({1} left)
-CollectibleObtained=<i>{0}</i> acquired
-ItemObtained=New item acquired - <i>{0}</i>
-ItemLost=Item lost - <i>{0}</i>
-QuestTaskCompleted=Task completed
-QuestTaskFailed=Task failed
-Diary=Journal
-WorldMap=Map of Silesia
-NewJournalEntry=New journal entry
-AlcoholDrunk=<i>Alcohol</i> is starting to affect you
-AlcoholGone=Effects of alcohol have worn off
+LoadLastCheckpoint=重新加载检查点
+Autosaves=自动保存
+SaveSlot=节省
+Quickload=快速加载
+Quicksave=快速保存
+Language=语言
+LanguageCommunity=* 社区翻译
+Voiceovers=配音语言
+MinimapPlus=放大
+MinimapMinus=缩小
+Compass=指南针
+CompassNorth=北
+CompassNorthFull=北方
+CompassSouth=南
+CompassSouthFull=南方
+CompassWest=西
+CompassWestFull=西方
+CompassEast=东
+CompassEastFull=东方
+CompassNorthEast=东北
+CompassNorthEastFull=东北方
+CompassSouthEast=东南
+CompassSouthEastFull=东南方
+CompassNorthWest=西北
+CompassNorthWestFull=西北方
+CompassSouthWest=西南
+CompassSouthWestFull=西南方
+Health=生命
+Energy=能量
+Level=等级
+ActiveQuests=当前任务
+NewQuest=新的冒险开始了
+NewTask=新任务
+CollectibleObtainedLeft=已获得 <i>{0}</i> (剩余 {1})
+CollectibleObtained=已获得 <i>{0}</i>
+ItemObtained=获得新物品 - <i>{0}</i>
+ItemLost=丢失物品 - <i>{0}</i>
+QuestTaskCompleted=任务完成
+QuestTaskFailed=任务失败
+Diary=日志
+WorldMap=西里西亚 (Silesia) 地图
+NewJournalEntry=新日志条目
+AlcoholDrunk=<i>酒精</i>开始对您产生影响
+AlcoholGone=酒精的作用已经消失
 HealthRestored=<color=red><i>Health</i></color> has been restored
 EnergyUnlimited=You now have <color=#56B061><i>Energy</i></color>
 EnergyUnlimitedExpired=Your <color=#56B061><i>Energy</i></color> level is back to normal
@@ -421,114 +421,114 @@ PoisonDrink=You suddenly feel sick
 VenomExpired=The effects of poison have ceased.
 Necklace=The amulet's magical power has begun to affect you.
 NecklaceExpired=The amulet's magical power has stopped affecting you.
-GameSaved=Game saved
-ScreenshotSaved=Screenshot saved
-CharacterCommandAdd=<i>{0}</i> is now under your command
-CharacterDied=<i>{0}</i> died
-SkipText=Press to skip
+GameSaved=游戏已保存
+ScreenshotSaved=截图已保存
+CharacterCommandAdd=<i>{0}</i> 现在由您指挥
+CharacterDied=已死亡 <i>{0}</i>
+SkipText=按键跳过
 ClimbingTextStart=To switch to climbing mode, press
 ClimbingTextEnd=To end climbing mode and to jump down, press
-Menu=Options
-Help=Help
-Continue=Resume
+Menu=选项
+Help=帮助
+Continue=继续游戏
 SettingsMusic={0} music
-Enable=Enable
-Enabled=Enabled
-Disable=Disable
-Disabled=Disabled
-Yes=Yes
-No=No
-Game=Game
-Sound=Sound
-Visuals=Visuals
-Cancel=Cancel
-Default=Restore defaults
-Apply=OK
-OK=OK
-Settings=Settings
-Subtitles=Subtitles
-SubtitlesShout=Combat shout subtitles
-DisableTutorial=Disable tutorial
-LostFocusPause=Pause on focus loss
-LockCursor=Lock mouse cursor
-Sighting=Aiming indicator
-Volume=Volumes
-MasterVolume=Master
-Music=Music
-SoundVolume=Sound effects
-Voice=Character voices
-SpeakerMode=Audio output
-SwapStereo=Swap stereo channels
-Effects=Post-processing
-Bloom=Bloom
-LightStreaks=Light streaks
-AmbientOcclusion=Ambient occlusion
-ChromaticAberration=Chromatic aberration
-LensDistortion=Lens distortion
-RainEffect=Raindrops on the camera lens
-Display=Display
-Quality=Quality
-Low=Lower
-Medium=Medium
-High=Higher
-Resolution=Resolution
-Screen=Screen
-VSync=Vertical sync
-Gamma=Gamma correction
-UIScale=UI scale
-Fullscreen=Full screen
-TextureQuality=Texture quality
-AntiAliasing=Anti-aliasing
-ShadowsQuality=Shadows quality
-AnisotropicFiltering=Anisotropic filtering
-UseHDR=HDR
-TargetFPS=Target frames per second
-TargetFPSHint=Controls the frame rate by specifying the number of frames the game tries to render per second. If a value is selected, vertical synchronization cannot be used.
-TargetFPS_0=Unlimited
-Accessibility=Accessibility
+Enable=启用
+Enabled=已启用
+Disable=禁用
+Disabled=已禁用
+Yes=是
+No=否
+Game=游戏
+Sound=音乐
+Visuals=视觉效果
+Cancel=取消
+Default=恢复默认值
+Apply=好
+OK=好
+Settings=设置
+Subtitles=字幕
+SubtitlesShout=战斗呐喊字幕
+DisableTutorial=禁用教程
+LostFocusPause=焦点丢失时暂停
+LockCursor=锁定鼠标指针
+Sighting=瞄准指示器
+Volume=音量
+MasterVolume=主音量
+Music=音乐
+SoundVolume=声音效果
+Voice=角色配音
+SpeakerMode=音频输出
+SwapStereo=交换立体声通道
+Effects=后期处理
+Bloom=泛光
+LightStreaks=浅色条纹
+AmbientOcclusion=环境闭塞
+ChromaticAberration=色差
+LensDistortion=镜头变形
+RainEffect=相机镜头上的雨滴
+Display=显示
+Quality=质量
+Low=低
+Medium=中
+High=高
+Resolution=分辨率
+Screen=屏幕
+VSync=垂直同步
+Gamma=伽玛校正
+UIScale=界面缩放
+Fullscreen=全屏
+TextureQuality=纹理质量
+AntiAliasing=抗锯齿
+ShadowsQuality=阴影质量
+AnisotropicFiltering=各向异性滤波
+UseHDR=HDR (高动态范围成像)
+TargetFPS=每秒目标帧数
+TargetFPSHint=通过指定游戏每秒尝试渲染的帧数来控制帧率。如果制定了该值，则无法使用垂直同步。
+TargetFPS_0=无限制
+Accessibility=无障碍
 AccessibilityControlsGamepad=Accessibility (with modifier)
 AccessibilityModifier=Accessibility modifier
-AccessibilityUseTTS=Read text
-AccessibilityUseTTSSubtitles=Read voiceover subtitles
-AccessibilityTTSDescription=Read environment description
-AccessibilityTTSRepeat=Repeat previously read messages
-AccessibilityTTSPreviousSentence=Jump to previous sentence
-AccessibilityTTSNextSentence=Jump to next sentence
-AccessibilityLockCamera=Lock camera rotation
-AccessibilityDisableCamera=Disable camera (keep UI only)
-AccessibilityMaterials=High contrast mode
-AccessibilityCharacterListener=First-person sound
-AccessibilityNavigation=Navigation assistance
-AccessibilityEasyCombatAi=Enemy AI slowdown in combat
-AccessibilityEasyCombatAi_0=None
-AccessibilityEasyCombatAi_1=Light
-AccessibilityEasyCombatAi_2=Moderate
-AccessibilityEasyCombatAi_3=Heavy
-AccessibilityBlockCriticalHit=Prevent playable character from being knocked down
-AccessibilityEasyCountdown=Double time to complete timed events
-AccessibilityPuzzles=Accessible puzzles
-AccessibilityCrypting=Accessible decrypting
-AccessibilityEasyStealth=Accessible stealth
-AccessibilityLimitEnemies=Maximum number of enemies to attack
-AccessibilitySignals=Audio cues
-AccessibilitySignalsHelp=Audio cue overview
-AccessibilityConfirmingSceneChange=Confirm leaving area
-AccessibilityConfirmingSceneChangeTrigger=Leave area
-AccessibilityConfirmingSceneChangeHelp=You can interact audio cue
-AccessibilityVisualSignals=Display accessibility cues
-AccessibilityDescriptionSignal=Environment has changed
+AccessibilityUseTTS=读出文本
+AccessibilityUseTTSSubtitles=阅读配音字幕
+AccessibilityTTSDescription=阅读环境说明
+AccessibilityTTSRepeat=重复之前读取的信息
+AccessibilityTTSPreviousSentence=跳转到上一句
+AccessibilityTTSNextSentence=跳转到下一句
+AccessibilityLockCamera=锁定相机旋转
+AccessibilityDisableCamera=禁用摄像头（仅保留用户界面）
+AccessibilityMaterials=高对比度模式
+AccessibilityCharacterListener=第一人称声音
+AccessibilityNavigation=导航辅助
+AccessibilityEasyCombatAi=敌方 AI 在战斗中减速
+AccessibilityEasyCombatAi_0=无
+AccessibilityEasyCombatAi_1=轻微
+AccessibilityEasyCombatAi_2=中等
+AccessibilityEasyCombatAi_3=重度
+AccessibilityBlockCriticalHit=防止游戏角色被击倒
+AccessibilityEasyCountdown=双倍时间以完成计时项目
+AccessibilityPuzzles=无障碍谜题
+AccessibilityCrypting=无障碍解密
+AccessibilityEasyStealth=无障碍隐形
+AccessibilityLimitEnemies=可攻击敌人的最大数量
+AccessibilitySignals=音频提示
+AccessibilitySignalsHelp=音频提示概览
+AccessibilityConfirmingSceneChange=确认离开区域
+AccessibilityConfirmingSceneChangeTrigger=离开区域
+AccessibilityConfirmingSceneChangeHelp=您可以交互音频提示
+AccessibilityVisualSignals=显示无障碍提示
+AccessibilityDescriptionSignal=环境已发生变化
 AccessibilityCutsceneSignal=Cinematic start and end audio cue
 AccessibilityCutsceneSignalStart=Cinematic has started
 AccessibilityCutsceneSignalEnd=Cinematic has ended
-AccessibilitySonar=Sonar
-AccessibilitySonarGamepad=Sonar vibration feedback
+AccessibilitySonar=声纳
+AccessibilitySonarGamepad=声纳振动反馈
 AccessibilitySonarWalls=Walls and impassable obstacles
 AccessibilitySonarCharacters=Friendly and neutral characters
 AccessibilitySonarNonCharacters=Inanimate objects
 AccessibilitySonarEnemies=Enemies
 AccessibilitySonarSide=Sonar scans sideways
-AccessibilitySonarNPC=Character sonar
-AccessibilityMuteSonar=Toggle character sonar
+AccessibilitySonarNPC=角色声纳
+AccessibilityMuteSonar=切换角色声纳
 AccessibilityStrafe=Strafing
 AccessibilityInteractableAroundSignal=New interactable nearby
 AccessibilityInteractableAroundSignalHelp=New interactable nearby
@@ -541,9 +541,9 @@ AccessibilityClearWaypoint=Clear custom waypoint
 AccessibilityCoordinates=Announce location coordinates
 AccessibilityTalkAroundSignalHelp=A character to talk to nearby
 AccessibilityDoorAroundSignalHelp=Door nearby
-AccessibilityIgnoreTorches=Ignore torches
-AccessibilityInteractionSignals=Movement and interaction audio cues
-AccessibilityCombatSignals=Combat audio cues
+AccessibilityIgnoreTorches=忽略火把
+AccessibilityInteractionSignals=动作和互动音频提示
+AccessibilityCombatSignals=战斗音频提示
 AccessibilityEnemyAroundSignal=New enemy nearby
 AccessibilityEnemyLostSignal=Enemy disappeared out of sight
 AccessibilityNoEnemyAround=There are no enemies nearby.
@@ -611,18 +611,18 @@ MorePercent={0}%
 234Pcs={0} pieces
 MorePcs={0} pieces
 Equipped=Equipped
-General=General
-Enemies=Enemies
+General=通用
+Enemies=敌人
 RemainingTime=Remaining time
-NextPage=Next page
-PreviousPage=Previous page
+NextPage=下一页
+PreviousPage=上一页
 DecryptProgress={0} % of symbols assigned
 DecryptFull=Deciphered successfully
 DecryptFullMessage=The message was successfully deciphered!
 BackToMenuDialogText=Are you sure you want to go back to the main menu? Any unsaved progress will be lost!
 ExitDialogText=Are you sure you want to quit? Any unsaved progress will be lost!
 SaveOptionsDialogText=Do you want to save your changes?
-Delete=Delete
+Delete=删除
 DeleteSaveDialogText=Are you sure you want to delete the selected save? This action cannot be undone!
 NoSavesDialogText=No saves found.
 OverwriteSaveDialogText=Are you sure you want to overwrite the selected save?
@@ -635,14 +635,14 @@ KeyRebindingDialogText=Press the button you want to assign to the action. If nec
 CreateNewSave=Create new save
 LoadDialogText=Are you sure you want to load the selected save? All unsaved progress will be lost!
 NeedRestartDialogText=You must restart the game for the changes to take effect.
-UseGamepad=Use controller
-GamepadRumble=Controller vibration
-DisableMouse=Disable mouse cursor
-RotationSensitivity=Camera rotation sensitivity
-RotationMode=Mouse scroll camera rotation mode
-RotationMode0=Scroll
-RotationMode1=Inverted scroll
-RotationMode2=Click and drag
+UseGamepad=使用控制器
+GamepadRumble=控制器振动
+DisableMouse=禁用鼠标光标
+RotationSensitivity=相机旋转灵敏度
+RotationMode=鼠标滚动相机旋转模式
+RotationMode0=滚动
+RotationMode1=反向滚动
+RotationMode2=点击并拖动
 GamepadConnected=Controller has been connected
 GamepadDisconnected=Controller has been disconnected
 VersionInfo={0} <b>v{1}</b> © 2019-2024 {2}
@@ -650,47 +650,47 @@ DevBuild=DEVELOPMENT BUILD v{0} ({1}) - ALL CONTENT IS WORK IN PROGRESS
 00_EndlessLevel=Arena
 00_EndlessLevel_Arena=Fight or Die
 Chapter=Chapter {0}.
-Controls=Controls
-Movement=Movement
-Run=Sprint
+Controls=控制
+Movement=运动
+Run=冲刺
 ControlsPrimary=Primary
 ControlsSecondary=Secondary
-ControlsUp=Up
-ControlsDown=Down
-ControlsLeft=Left
-ControlsRight=Right
-ControlsAutoRun=Auto run
-ControlsSneakingMode=Crouch / sneak
-ControlsLookAround=Look around (+ aiming as in combat)
-ControlsRotationMouse=Aiming during combat
-ControlsRotationUp=Turn up
-ControlsRotationDown=Turn down
-ControlsRotationLeft=Turn left
-ControlsRotationRight=Turn right
-Interact=Interaction
-ControlsInteract=Perform the highlighted action
-ControlsInteractCycle=Switch to next interactable object
-ControlsShowInteractables=Highlight all interactable objects
-Combat=Combat
-Battle=Battle
-ControlsAttack=Attack
-ControlsShield=Block attack with shield
-ControlsCombatMode=Draw / hide weapon
-Other=Other
-ControlsMenu=Menu
-ControlsCancel=Skip / cancel
-ControlsMenuCancel=Menu / skip / cancel
-Inventory=Inventory
-ControlsInventory=Open the inventory
-ControlsInventorySecondary=Default inventory action
-ControlsCameraRotation=Rotate the camera
-ControlsRemoveBinding=Remove binding
-Screenshot=Screenshot
+ControlsUp=上
+ControlsDown=下
+ControlsLeft=左
+ControlsRight=右
+ControlsAutoRun=自动跑动
+ControlsSneakingMode=蹲下 / 潜行
+ControlsLookAround=环顾四周（+ 与战斗中一样瞄准）
+ControlsRotationMouse=战斗中瞄准
+ControlsRotationUp=向上
+ControlsRotationDown=向下
+ControlsRotationLeft=向左
+ControlsRotationRight=向右
+Interact=互动
+ControlsInteract=执行高亮显示的操作
+ControlsInteractCycle=切换到下一个可交互对象
+ControlsShowInteractables=高亮显示所有可交互对象
+Combat=战斗
+Battle=战斗
+ControlsAttack=攻击
+ControlsShield=用盾牌阻挡攻击
+ControlsCombatMode=拔出/收起 武器
+Other=其他
+ControlsMenu=菜单
+ControlsCancel=跳过 / 取消
+ControlsMenuCancel=菜单 / 跳过 / 取消
+Inventory=清单
+ControlsInventory=打开清单
+ControlsInventorySecondary=默认清单操作
+ControlsCameraRotation=旋转摄像头
+ControlsRemoveBinding=去除绑定
+Screenshot=截图
 Console=Console
-Camera=Camera
-Interface=User interface
-Minimap=Minimap
-InterfaceMessages=Important messages
+Camera=相机
+Interface=用户界面
+Minimap=小地图
+InterfaceMessages=重要信息
 Collectibles=Coins
 Types=Types
 Usage=Usage
@@ -698,7 +698,7 @@ Decipherment=Decipherment
 Farkle=Dice
 SilesianFarkle=Silesian Farkle
 Puzzle=Puzzle
-Stealth=Stealth
+Stealth=隐形
 Command=Command
 Books=Books
 Letters=Letters
